--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.11.16",
     "@react-rxjs/core": "^0.10.4",
     "@react-rxjs/utils": "^0.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
     "@types/node": "^16.18.23",
+    "axios": "^1.3.5",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
@@ -42,6 +49,7 @@
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.0",
+    "@types/lodash": "^4.14.192",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "@types/react-helmet": "^6.1.6",
@@ -55,8 +63,8 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "prettier": "^2.8.7",
-    "ts-jest": "^29.1.0",
     "react-scripts": "5.0.1",
+    "ts-jest": "^29.1.0",
     "typescript": "^4.9.5"
   }
 }
